--- a/index.html
+++ b/index.html
@@ -6,14 +6,23 @@
     <title>My Page</title>
     <style>
         body {
-            background-color: lightgreen;
+            background-color: #e5e8d2;
             margin: 0;
-            padding: 20px;
+            padding: 0;
             font-family: Arial, sans-serif;
+            min-height: 100vh;
+            box-sizing: border-box;
+            border: 20px solid #47521e;
+        }
+        
+        .content {
+            padding: 20px;
         }
     </style>
 </head>
 <body>
-    <h1>hi</h1>
+    <div class="content">
+        <h1>hi</h1>
+    </div>
 </body>
 </html>
