--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
             font-family: Arial, sans-serif;
             min-height: 100vh;
             box-sizing: border-box;
-            border: 20px solid #47521e;
         }
         
-        .content {
+        .border-box {
+            border: 2px solid #47521e;
+            min-height: calc(100vh - 60px);
             padding: 20px;
         }
     </style>
