--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             background-color: #e5e8d2;
             margin: 0;
-            padding: 0;
+            padding: 30px;
             font-family: Arial, sans-serif;
             min-height: 100vh;
             box-sizing: border-box;
@@ -22,7 +22,7 @@
     </style>
 </head>
 <body>
-    <div class="content">
+    <div class="border-box">
         <h1>hi</h1>
     </div>
 </body>
