Added main image

--- a/index.html
+++ b/index.html
@@ -125,9 +125,7 @@
         <div class="container">
             <div class="left-section">
                 <div class="large-image">
-                    <!-- Replace this with your large image -->
-                    <!-- <img src="path-to-your-large-image.jpg" alt="Main Image"> -->
-                    <span>Large Image Here</span>
+                    <img src="foto-casal.png" alt="Main Image">
                 </div>
                 <div class="text-content">
                     <h2>Your Text Here</h2>
