--- a/index.html
+++ b/index.html
@@ -133,8 +133,7 @@
         <div class="container">
             <div class="left-section">
                 <div class="large-image">
-                    <!-- Replace this with your large image -->
-                    <!-- <img src="path-to-your-large-image.jpg" alt="Main Image"> -->
+                    <img src="foto-casal.png" alt="Main Image"> 
                     <span>Large Image Here</span>
                 </div>
                 <div class="text-content">
@@ -146,19 +145,19 @@
             <div class="right-section">
                 <a href="page1.html" class="button-image">
                     <img src="flower.png" alt="" class="button-flower">
-                    <span class="button-text">Button 1</span>
+                    <span class="button-text">Roteiro Cerimônia</span>
                     <img src="flower.png" alt="" class="button-flower">
                 </a>
                 
                 <a href="page2.html" class="button-image">
                     <img src="flower.png" alt="" class="button-flower">
-                    <span class="button-text">Button 2</span>
+                    <span class="button-text">Menu Jantar</span>
                     <img src="flower.png" alt="" class="button-flower">
                 </a>
                 
                 <a href="page3.html" class="button-image">
                     <img src="flower.png" alt="" class="button-flower">
-                    <span class="button-text">Button 3</span>
+                    <span class="button-text">Informações Importantes</span>
                     <img src="flower.png" alt="" class="button-flower">
                 </a>
             </div>
