Adding font and logo

--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Spectral:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         body {
             background-color: #e5e8d2;
             margin: 0;
             padding: 30px;
-            font-family: Arial, sans-serif;
+            font-family: 'Spectral', serif;
             min-height: 100vh;
             box-sizing: border-box;
         }
@@ -104,6 +107,18 @@
             transform: translateY(-3px);
             box-shadow: 0 4px 8px rgba(71, 82, 30, 0.3);
         }
+
+        .decorative-image {
+            width: 80%;
+            max-width: 250px;
+            margin-top: 10px;
+        }
+        
+        .decorative-image img {
+            width: 80%;
+            height: auto;
+            display: block;
+        }
         
         /* Mobile layout */
         @media (max-width: 768px) {
@@ -136,7 +151,6 @@
                     <img src="foto-casal.png" alt="Main Image"> 
                 </div>
                 <div class="text-content">
-                    <h2>Your Text Here</h2>
                     <p>Add any description or content you want below the image.</p>
                 </div>
             </div>
@@ -159,6 +173,9 @@
                     <span class="button-text">Informações Importantes</span>
                     <img src="flower.png" alt="" class="button-flower">
                 </a>
+                <div class="decorative-image">
+                    <img src="logo.png" alt="Decorative Image">
+                </div>
             </div>
         </div>
     </div>
