Debug font and logo

--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
         }
 
         .decorative-image {
-            width: 80%;
-            max-width: 250px;
+            width: 100%;
+            max-width: 150px;
             margin-top: 10px;
         }
         
         .decorative-image img {
-            width: 80%;
+            width: 100%;
             height: auto;
             display: block;
         }
@@ -147,11 +147,14 @@
     <div class="border-box">
         <div class="container">
             <div class="left-section">
+                <div class="text-content">
+                    <h3>Olga & João</h3>
+                </div>
                 <div class="large-image">
                     <img src="foto-casal.png" alt="Main Image"> 
                 </div>
                 <div class="text-content">
-                    <p>Add any description or content you want below the image.</p>
+                    <h3>28.02.26</h3>
                 </div>
             </div>
             
