Slight Adjustment to text - page 1

--- a/page1.html
+++ b/page1.html
@@ -108,6 +108,7 @@
             margin: 8px 0;
             font-size: 19.2px;
             color: #47521e;
+            flex-wrap: wrap;
         }
         
         .flower-icon {
@@ -120,6 +121,8 @@
             font-size: 10px;
             opacity: 0.7;
             margin-left: 25px;
+            margin-top: 1px;
+            width: 100%
         }
         
         .gray-flower {
@@ -221,7 +224,7 @@
                         <li><img src="flower-green.png" alt="" class="flower-icon"> Sara & Pedro</li>
                         <li><img src="flower-green.png" alt="" class="flower-icon"> Lizandra & Eduardo</li>
                         <li><img src="flower-green.png" alt="" class="flower-icon gray-flower"> <span class="absent-couple">Mari & Vavá</span></li> 
-                        <li></li><span class="parents-note">Não puderam estar presentes, mas celebram à distância</span></li>
+                        <div class="parents-note">Não puderam estar presentes, mas celebram à distância</div>
                     </ul>
                 </div>
             </div>
