Slight adjusment to text (again)

--- a/page1.html
+++ b/page1.html
@@ -181,7 +181,7 @@
             }
             
             .parents-list li {
-                font-size: 16px;
+                font-size: 14px;
             }
             
             .number-circle {
@@ -223,8 +223,8 @@
                         <li><img src="flower-green.png" alt="" class="flower-icon"> Luana & Ricardo</li>
                         <li><img src="flower-green.png" alt="" class="flower-icon"> Sara & Pedro</li>
                         <li><img src="flower-green.png" alt="" class="flower-icon"> Lizandra & Eduardo</li>
-                        <li><img src="flower-green.png" alt="" class="flower-icon gray-flower"> <span class="absent-couple">Mari & Vavá</span></li> 
-                        <div class="parents-note">Não puderam estar presentes, mas celebram à distância</div>
+                        <li><img src="flower-green.png" alt="" class="flower-icon gray-flower"> <span class="absent-couple">Mari & Vavá*</span></li> 
+                        <div class="parents-note">*Não puderam estar presentes, mas celebram à distância</div>
                     </ul>
                 </div>
             </div>
