Adjustments to page 3 (again)

--- a/page3.html
+++ b/page3.html
@@ -181,7 +181,7 @@
             <div class="schedule-item">
                 <div class="schedule-content">
                     <h2 class="schedule-title">Destaque</h2>
-                    <li> Esse casamento não teria sido possível sem a ajuda dessas pessoas incríveis, que ajudaram com a organização e planejamento:</li>
+                    <h3 class="schedule-subtitle"> Esse casamento não teria sido possível sem a ajuda dessas pessoas incríveis, que ajudaram com a organização e planejamento:</h3>
                     <ul class="parents-list">
                         <li><img src="flower-green.png" alt="" class="flower-icon"> Vânia Souza (mãe da Noiva)</li>
                         <li><img src="flower-green.png" alt="" class="flower-icon"> Manoel Souza (pai da Noiva)</li>
