--- a/page3.html
+++ b/page3.html
@@ -195,7 +195,7 @@
                     <h2 class="schedule-title">Fornecedores</h2>
                     <ul class="parents-list">
                         <li><img src="flower-green.png" alt="" class="flower-icon"> <b>Arte e Lembranças:</b> Sara Adrian (@insta) e </li>
-                        <li>        </li>Lúcia Casement (@insta)</li>
+                        <li>        Lúcia Casement (@insta)</li>
                         <li><img src="flower-green.png" alt="" class="flower-icon"> <b>Decoração:</b> Harumi (@insta)</li>
                         <li><img src="flower-green.png" alt="" class="flower-icon"> <b>Fotografia:</b> Rosenberg (@insta)</li>
                         <li><img src="flower-green.png" alt="" class="flower-icon"> <b>Música cerimônia:</b> Canta arte (@insta)</li>
