Additional adjustments to page 1

--- a/page1.html
+++ b/page1.html
@@ -202,6 +202,7 @@
                 <div class="number-circle">1</div>
                 <div class="schedule-content">
                     <h2 class="schedule-title">Entrada do celebrante - Simon Holanda</h2>
+                    <p class="schedule-music"><span class="music-note">♫</span> O Garoto e a Garça - Estúdio Ghibli (início)</p>
                 </div>
             </div>
             
