--- a/page3.html
+++ b/page3.html
@@ -183,8 +183,8 @@
                     <h2 class="schedule-title">Destaque</h2>
                     <h3 class="schedule-subtitle"> Esse casamento não teria sido possível sem a ajuda dessas pessoas incríveis, que ajudaram com a organização e planejamento:</h3>
                     <ul class="parents-list">
-                        <li><img src="flower-green.png" alt="" class="flower-icon"> Vânia Souza (mãe da Noiva)</li>
-                        <li><img src="flower-green.png" alt="" class="flower-icon"> Manoel Souza (pai da Noiva)</li>
+                        <li><img src="flower-green.png" alt="" class="flower-icon"> Vânia Souza </li>
+                        <li><img src="flower-green.png" alt="" class="flower-icon"> Manoel Souza </li>
                         <li><img src="flower-green.png" alt="" class="flower-icon"> Rosângela (Cerimonialista)</li>
                     </ul>
                 </div>
@@ -194,14 +194,15 @@
                 <div class="schedule-content">
                     <h2 class="schedule-title">Fornecedores</h2>
                     <ul class="parents-list">
-                        <li><img src="flower-green.png" alt="" class="flower-icon"> <b>Arte e Lembranças:</b> Sara Adrian (@insta) e </li>
-                        <li>        Lúcia Casement (@insta)</li>
-                        <li><img src="flower-green.png" alt="" class="flower-icon"> <b>Decoração:</b> Harumi (@insta)</li>
-                        <li><img src="flower-green.png" alt="" class="flower-icon"> <b>Fotografia:</b> Rosenberg (@insta)</li>
-                        <li><img src="flower-green.png" alt="" class="flower-icon"> <b>Música cerimônia:</b> Canta arte (@insta)</li>
-                        <li><img src="flower-green.png" alt="" class="flower-icon"> <b>DJ:</b> Gustavo (@insta) </li>
-                        <li><img src="flower-green.png" alt="" class="flower-icon"> <b>Jantar:</b> Chadu Buffet (@insta) </li>
-                        <li><img src="flower-green.png" alt="" class="flower-icon"> <b>Doces e Bolo:</b> Janaína (@insta) </li>
+                        <li><img src="flower-green.png" alt="" class="flower-icon"> <b>Arte e Lembranças:</b> Sara Adrian (@sari.a09) e </li>
+                        <li>        Lúcia Casement (@atomyarts)</li>
+                        <li><img src="flower-green.png" alt="" class="flower-icon"> <b>Decoração:</b> Harumi (@harumi_decoracoes)</li>
+                        <li><img src="flower-green.png" alt="" class="flower-icon"> <b>Fotografia:</b> Rosemberg (@bergarruda)</li>
+                        <li><img src="flower-green.png" alt="" class="flower-icon"> <b>Música cerimônia:</b> Canta arte (@canta_arte)</li>
+                        <li><img src="flower-green.png" alt="" class="flower-icon"> <b>DJ:</b> Gustavo (@chandal_producoes) </li>
+                        <li><img src="flower-green.png" alt="" class="flower-icon"> <b>Jantar:</b> Edu Chadu Buffet (@educhadu) </li>
+                        <li><img src="flower-green.png" alt="" class="flower-icon"> <b>Doces e Bolo:</b> Janaína Xavier (@janaxavier.confeitaria) </li>
+                        <li><img src="flower-green.png" alt="" class="flower-icon"> <b>Pães de Mel:</b> Vânia Souza (Mãe da Noiva) </li>
                     </ul>
                 </div>
             </div>
